--- a/todo-app/war/WEB-INF/logging.properties
+++ b/todo-app/war/WEB-INF/logging.properties
@@ -8,6 +8,13 @@
 #   <property name="java.util.logging.config.file" value="WEB-INF/logging.properties"/>
 # </system-properties>
 #
+#	SEVERE (highest value)
+#	WARNING
+#	INFO
+#	CONFIG
+#	FINE
+#	FINER
+#	FINEST (lowest value)
 
 # Set the default logging level for all loggers to WARNING
-.level = WARNING
+.level = FINEST 
